// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clientMiddleware should not validate secret when missing from client 1`] = `
Client {
  "_approved": true,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": null,
  "_emailAuthorizationUri": null,
  "_events": Array [],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": null,
  "_secret": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`clientMiddleware should successfully set client on ctx 1`] = `
Client {
  "_approved": true,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": null,
  "_emailAuthorizationUri": null,
  "_events": Array [],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": null,
  "_secret": "secret",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;
